--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,8 +2,15 @@
   
   <% @restaurants.each do |restaurant| %>
     <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
-    <div id='description'><%= restaurant.description %></div>
-    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+    <div id='description'><%= restaurant.description %></div><br>
+    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %><br>
+    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %><br>
+    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %><br>
+    
+    <% restaurant.reviews.all.each do |review| %>
+    Thoughts: <%= review.thoughts %> | Rating: <%= review.rating %><br>
+    <% end %><br>
+  
   <% end %>
 
 <% else %>
