--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,17 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+
 <%= flash[:notice] %>
+
+<p class='notice'><%= notice %></p>
+<p class='alert'><%= alert %></p>
+
+
 <%= yield %>
 
 </body>
+
 </html>
