--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>YelpClone</title>
+  <link rel='stylesheet' type='text/css' href='/design.css'></link>
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"/>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,40 +13,45 @@
 
 
   <!-- code from facebook to show their buttons -->
-  <script>
-    window.fbAsyncInit = function() {
-      FB.init({
-        appId      : '1570958423199054',
-        xfbml      : true,
-        version    : 'v2.6'
-      });
-    };
+  <div id='facebookButtons'>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1570958423199054',
+          xfbml      : true,
+          version    : 'v2.6'
+        });
+      };
 
-    (function(d, s, id){
-       var js, fjs = d.getElementsByTagName(s)[0];
-       if (d.getElementById(id)) {return;}
-       js = d.createElement(s); js.id = id;
-       js.src = "//connect.facebook.net/en_US/sdk.js";
-       fjs.parentNode.insertBefore(js, fjs);
-     }(document, 'script', 'facebook-jssdk'));
-  </script>
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
 
-  <div
-    class="fb-like"
-    data-share="true"
-    data-width="450"
-    data-show-faces="true">
+    <div
+      class="fb-like"
+      data-share="true"
+      data-width="450"
+      data-show-faces="true">
+    </div>
   </div>
   <!-- end of code from facebook to show their buttons -->
 
+<div id='signingButtons'>
+  <% if user_signed_in? %>
+    <span class='signingButtons'><%= link_to "Sign out", destroy_user_session_path, method: :delete %></span>
+  <% else %>
+    <span class='signingButtons'><%= link_to "Sign in", new_user_session_path %></span>
+    <span class='signingButtons'><%= link_to "Sign up", new_user_registration_path %></span>
+    <span class='signingButtons'><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path() %></span>
+  <% end %>
+</div>
 
-<% if user_signed_in? %>
-  <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-<% else %>
-  <%= link_to "Sign in", new_user_session_path %>
-  <%= link_to "Sign up", new_user_registration_path %>
-  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path() %>
-<% end %>
+<div id='floatClearer'></div>
 
 
 <p class='notice'><%= notice %></p>
