Trying out image functionality

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -16,6 +16,8 @@
     
     <section id='restaurantContainer'>
 
+      <%= image_tag restaurant.image.url(:thumb) %>
+
       <div id='container1'>
 
       <div id='restaurantHeading'>
