--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -9,8 +9,9 @@
   </section>
 <% end %>
 
-<%= form_for @restaurant do |f| %>
+<%= form_for @restaurant, html: {multipart: true} do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
+  <%= f.file_field :image %>
   <%= f.submit %>
 <% end %>
